--- a/index.html
+++ b/index.html
@@ -2,36 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Volume of Right Triangular Prism, with JavaScript">
+    <meta name="description" content="User Input, with JavaScript">
     <meta name="keywords" content="immaculata, ics2o">
-    <meta name="author" content="Nathan Student">
+    <meta name="author" content="Nathan Araujo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="./fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./fav/favicon-16x16.png">
-    <link rel="manifest" href="./fav/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Volume of a Triangular Pyramid in JS</title>
+    <title>Volume of a Sphere in JS</title>
   </head>
   <body>
     <script src="./js/script.js"></script>
-    <h1>Volume of a Right Triangular Pyramid in JS</h1>
+    <h1>Volume of a Sphere in JS</h1>
 		<table>
 			<tr>
 				<td>
-					<h3>Enter the dimensions of your pyramid:</h3>
+					<!--textboxes-->
+					<h3>Enter the radius of your sphere:</h3>
 					<form action="javascript:calcVolume()">
-						<label for="side-a">Side a (m):</label>
-						<input type="number" step="any" id="side-a" placeholder="Enter side a (m)"><br><br>
-						<label for="side-b">Side b (m):</label>
-						<input type="number" step="any" id="side-b" placeholder="Enter side b (m)"><br><br>
-						<label for="height">Height (m):</label>
-						<input type="number" step="any" id="height" placeholder="Enter height (m)"><br><br>
+						<label for="radius">Radius (cm):</label>
+						<input type="number" step="any" id="radius" placeholder="Radius (cm)"><br><br>
 						<input type="submit" value="Calculate Volume">
 					</form>
 				</td>
 				<td width=45%>
-					<img src="./images/triangle_pyramid.jpg" alt="Pyramid" width="85%" height="auto"/>
+					<!-- image -->
+					<img src="./images/sphere.png" alt="Sphere" width="85%" height="auto"/>
 				</td>
 			</tr>
 		</table>
